# drake

examples/allegro_hand/: BUILD.bazel  allegro_common.cc  allegro_common.h  allegro_hand_state.cc  allegro_hand_state.h  allegro_lcm.cc  allegro_lcm.h  allegro_set_joint_pose.cc  run_allegro_close_hand.cc  run_allegro_constant_load_demo.cc  run_allegro_grasp_demo.cc  run_allegro_movehand.cc
examples/allegro_hand/in_hand_manipulation/: BUILD.bazel  allegro_single_object_simulation.cc  mug_state_set.cc  mug_state_set.h  object_pose_publisher.cc  object_pose_publisher.h  run_rotating_mug.cc
examples/allegro_hand/in_hand_manipulation/models/: simple_mug2.sdf
examples/allegro_hand/inhand_manipulation/: BUILD.bazel  allegro_single_object_sim.pmd  allegro_single_object_simulation.cc  allgero_single_object_simulation.cc  lcm_simulation_test.cc  run_close_hand.cc  state_detection_test.cc
examples/allegro_hand/inhand_manipulation/models/objects/: simple_mug.sdf
examples/allegro_hand/point_grasp/: BUILD.bazel  allegro_single_object_simulation.cc  mug_state_set.cc  mug_state_set.h  object_state_handler.cc  object_state_handler.h  point_grasp_common.cc  point_grasp_common.h  test_lcm_movefinger.cc
lcmtypes/: lcmt_allegro_command.lcm
manipulation/models/allegro_hand_description/meshes/STLsource/: base_link.STL  link_0.0.STL  link_14.0.STL  link_2.0.STL  link_3.0_tip.STL  link_4.0.STL  note_intertia_measure.txt
manipulation/models/allegro_hand_description/sdf/: allegro_hand_description_left.sdf  allegro_hand_description_right.sdf  allegro_right_finger_0.sdf  allegro_right_finger_1.sdf  allegro_right_finger_2.sdf  allegro_right_finger_3.sdf
manipulation/models/allegro_hand_description/urdf/: allegro_hand_description_left.urdf  allegro_hand_description_right.urdf
multibody/multibody_tree/: multibody_tree.cc  multibody_tree.h  spatial_inertia.h
multibody/rigid_body_plant/visualization/: contact_viz.py
playground/: BUILD.bazel  cal_inertia.cc  test_array.cc  test_eigen.cc
