# -*- python -*-

load("//tools:drake.bzl", "drake_cc_binary")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/install:install.bzl", "install")

drake_cc_binary(
    name = "test_eigen",
    srcs = ["test_eigen.cc"],
    deps = [
        "//common",
    ],
)


drake_cc_binary(
    name = "cal_inertia",
    srcs = ["cal_inertia.cc"],
    deps = [
      "//common",
    ],
)

drake_cc_binary(
    name = "test_array",
    srcs = ["test_array.cc"],
    deps = [
      "//common",
    ],
)