# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "allegro_common",
    srcs = ["allegro_common.cc"],
    hdrs = ["allegro_common.h"],
    deps = [
        "//multibody/multibody_tree/multibody_plant",
    ],
)

drake_cc_library(
    name = "allegro_lcm",
    srcs = ["allegro_lcm.cc"],
    hdrs = ["allegro_lcm.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":allegro_common",
        "//common/trajectories:piecewise_polynomial",
        "//lcmtypes:allegro",
        "//systems/framework:leaf_system",
    ],
)


drake_cc_library(
    name = "allegro_set_joint_pose",
    srcs = ["allegro_set_joint_pose.cc"],
    hdrs = ["allegro_set_joint_pose.h"],
    deps = [
        ":allegro_common",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/parsers",
    ],
)


drake_cc_binary(
    name = "run_allegro_constant_load_demo",
    srcs = ["run_allegro_constant_load_demo.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//lcm",
        "//systems/analysis",
        "//systems/primitives:constant_vector_source",
        "//systems/rendering:pose_bundle_to_draw_message",
    ],
)

drake_cc_binary(
    name = "run_allegro_controlled_demo",
    srcs = ["run_allegro_controlled_demo.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        ":allegro_common",
        ":allegro_set_joint_pose",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//lcm",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:signal_logger",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "run_allegro_grasp_demo",
    srcs = ["run_allegro_grasp_demo.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
        "//examples/allegro_hand/grasp:models",
    ],
    deps = [
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_set_joint_pose",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//lcm",
        "//geometry:geometry_visualization",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:signal_logger",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)


