# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

install_data()

drake_cc_binary(
    name = "allegro_single_object_simulation",
    srcs = ["allegro_single_object_simulation.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
        ":models",
    ],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_lcm",
        "//lcm",
        "//lcmtypes:allegro",
        "//geometry:geometry_visualization",
        "//math",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/controllers:pid_controller",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "lcm_simulation_test",
    srcs = ["lcm_simulation_test.cc"],
    deps = [
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_lcm",
        "//lcm",
        "//lcmtypes:allegro",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)

drake_cc_binary(
    name = "state_detection_test",
    srcs = ["state_detection_test.cc"],
    deps = [
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_lcm",
        "//lcm",
        "//lcmtypes:allegro",
        "@gflags",
        "@lcmtypes_bot2_core",
        "@lcmtypes_robotlocomotion",
    ],
)


add_lint_tests()
