# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

install_data()

drake_cc_library(
    name = "point_grasp_common",
    hdrs = ["point_grasp_common.h"],
    srcs = ["point_grasp_common.cc"],
    deps = [
        "//systems/framework:leaf_system",
        "//examples/allegro_hand:allegro_common",
        "//geometry",
        "//math",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/inverse_kinematics:inverse_kinematics",
        "//lcm",
        "//lcmtypes:allegro",
    ],
)

drake_cc_library(
    name = "object_state_handler",
    hdrs = ["object_state_handler.h"],
    srcs = ["object_state_handler.cc"],
    deps = [
        ":point_grasp_common",
        "//systems/framework:leaf_system",
        "//geometry",
        "//math",
        "//multibody/multibody_tree/multibody_plant",
        "//lcm",
    ],
)



drake_cc_binary(
    name = "test_lcm",
    srcs = ["test_lcm.cc"],
    deps = [
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_hand_state",
        "//examples/allegro_hand:allegro_lcm",
        "//lcm",
        "//lcmtypes:allegro",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "test_lcm_movefinger",
    srcs = ["test_lcm_movefinger.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_hand_state",
        "//examples/allegro_hand:allegro_lcm",
        "//multibody/inverse_kinematics:inverse_kinematics",
        "//manipulation/planner:differential_inverse_kinematics",
        "//lcm",
        "//lcmtypes:allegro",
        "@gflags",
    ],
)


drake_cc_binary(
    name = "allegro_single_object_simulation",
    srcs = ["allegro_single_object_simulation.cc"],
    data = [
        "//manipulation/models/allegro_hand_description:models",
        ":models",
    ],
    deps = [
        ":point_grasp_common",
        ":object_state_handler",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//examples/allegro_hand:allegro_common",
        "//examples/allegro_hand:allegro_lcm",
        "//lcm",
        "//lcmtypes:allegro",
        "//geometry:geometry_visualization",
        "//math",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/multibody_plant:contact_results_to_lcm",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
        "//systems/analysis",
        "//systems/controllers:pid_controller",
        "//systems/primitives",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/lcm:lcm_pubsub_system",
        "@gflags",
    ],
)
